# adbgui_web

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  Trunk.toml  index.html  index.scss  rustfmt.toml
.githooks/: post-commit  pre-commit
.github/workflows/: cd.yml  ci.yml
src/: app.rs  main.rs
src/api/: api.rs  error.rs  mod.rs  routes.rs
src/components/: drop_modal.rs  logcat_shell.rs  mod.rs  sidebar.rs
src/components/atomic/: adjustable_container.rs  button.rs  message.rs  mod.rs  resizable_container.rs
src/macros/: mod.rs
src/models/: message.rs
