[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# [lib]
# crate-type=["cdylib"]

[profile.release]
lto = true

[dependencies]
yew = "0.19"
yew-hooks = "0.1.56"
yew-agent = "0.1.0"
yew-router = "0.16"
yew_icons = { version = "0.4.1", features = ["FeatherHome"]}

wasm-bindgen = "0.2.45"
wasm-logger = "0.2"

wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.6"
reqwasm = "0.4"
web-sys = { version = "0.3.55", features = [ "CssStyleDeclaration", "HtmlElement" ]}
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}
